--- a/package.json
+++ b/package.json
@@ -10,13 +10,34 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cherry-soft/react-native-basic-pagination": "^1.0.4",
+    "@openspacelabs/react-native-zoomable-view": "^2.1.6",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "easycolors": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.9.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-video": "^6.0.0-beta.8",
+    "react-query": "^3.39.3",
+    "rn-icons": "^1.0.4",
+    "tailwind-colors": "^1.1.0",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@dr.pogodin/react-native-fs": "^2.24.6",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
