--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-mmkv": "^2.12.2",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.9.0",
     "react-native-responsive-screen": "^1.4.2",
