--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cherry-soft/react-native-basic-pagination": "^1.0.4",
+    "@kesha-antonov/react-native-background-downloader": "^3.1.3",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -19,6 +20,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "easycolors": "^2.0.0",
+    "hlsdownloader": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.1",
@@ -29,6 +31,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-video": "^6.0.0-beta.8",
     "react-query": "^3.39.3",
     "rn-icons": "^1.0.4",
@@ -39,7 +42,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@dr.pogodin/react-native-fs": "^2.24.6",
+    "@dr.pogodin/react-native-fs": "^2.25.0",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
