--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cherry-soft/react-native-basic-pagination": "^1.0.4",
+    "@consumet/extensions": "^1.5.6",
     "@kesha-antonov/react-native-background-downloader": "^3.1.3",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
