--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.9.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
