--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@tanstack/react-query": "^5.36.2",
     "axios": "^1.6.8",
     "easycolors": "^2.0.0",
     "hlsdownloader": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
@@ -33,10 +35,11 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-simple-accordion": "^2.0.2",
     "react-native-svg": "^15.2.0",
+    "react-native-swiper-flatlist": "^3.2.4",
     "react-native-uuid": "^2.0.2",
     "react-native-video": "^6.0.0-beta.8",
-    "react-query": "^3.39.3",
     "rn-icons": "^1.0.4",
     "tailwind-colors": "^1.1.0",
     "twrnc": "^4.2.0"
