--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hlsdownloader": "^3.2.5",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-ad-manager": "^2.0.10",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -42,7 +43,8 @@
     "react-native-video": "^6.0.0-beta.8",
     "rn-icons": "^1.0.4",
     "tailwind-colors": "^1.1.0",
-    "twrnc": "^4.2.0"
+    "twrnc": "^4.2.0",
+    "vexo-analytics": "^1.3.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
