--- a/package.json
+++ b/package.json
@@ -10,8 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@cherry-soft/react-native-basic-pagination": "^1.0.4",
+    "@dr.pogodin/react-native-fs": "^2.25.0",
+    "@openspacelabs/react-native-zoomable-view": "^2.1.6",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.2",
+    "easycolors": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-simple-accordion": "^2.0.2",
+    "react-native-svg": "^15.3.0",
+    "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-uuid": "^2.0.2",
+    "react-native-video": "^6.1.2",
+    "rn-icons": "^1.0.4",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
