--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@cherry-soft/react-native-basic-pagination": "^1.0.4",
+    "@devvie/bottom-sheet": "^0.3.0",
     "@dr.pogodin/react-native-fs": "^2.25.0",
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@openspacelabs/react-native-zoomable-view": "^2.1.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -32,10 +34,13 @@
     "react-native-simple-accordion": "^2.0.2",
     "react-native-svg": "^15.3.0",
     "react-native-swiper-flatlist": "^3.2.4",
+    "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.2",
     "react-native-video": "^6.1.2",
+    "remove": "^0.1.5",
     "rn-icons": "^1.0.4",
-    "twrnc": "^4.2.0"
+    "twrnc": "^4.2.0",
+    "vexo-analytics": "^1.3.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
