--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Gview",
-  "version": "0.0.1",
+  "version": "1.2.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -23,6 +23,7 @@
     "easycolors": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
